--- a/_data/team.yml
+++ b/_data/team.yml
@@ -171,7 +171,7 @@
   profile_path: /company/about/#geoff-mulligan
   image: /img/people/geoff-mulligan.jpg
   image_description: Photo of Geoff Mulligan
-  position: IoT Architect
+  position: IoT Practice Lead
   bio: >
     Geoff served as a Presidential Innovation Fellow, and has developed
     standards that power the internet, including IPv6 and 6LoWPAN. He specializes
@@ -316,7 +316,7 @@
   profile_path: /company/about/#victor-zapanta
   image: /img/people/victor-zapanta.jpg
   image_description: Photo of Victor Zapanta
-  position: Research & Design Practice Area Lead
+  position: Research & Design Practice Lead
   bio: >
     Victor co-founded the Consumer Financial Protection Bureau's Design+Tech team,
     and served as a member of 18F. His design leadership spans multiple high-profile
