Use site variable for employee count and state count

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,9 @@ hackerone_url: https://hackerone.com/skylight_qgvpb
 slack_invite_url: ""
 youtube_url: https://youtube.com/channel/UCbNzANEv5xYqfMbDrv8kcEw
 
+employee_count: 53
+state_count: 24
+
 # Build settings
 incremental: true
 livereload: true
