--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -212,9 +212,9 @@ service_design_framework:
       url: /work/toolkits/service-design-framework/phase-4-experiment/
     - title: "Phase 5: Implement"
       url: /work/toolkits/service-design-framework/phase-5-implement/
-    - title: "Appendix: Methods"
+    - title: "Appendix A: Methods"
       url: /work/toolkits/service-design-framework/appendix-methods/
-    - title: "Appendix: Templates"
+    - title: "Appendix B: Templates"
       url: /work/toolkits/service-design-framework/appendix-templates/
-    - title: "Appendix: Glossary"
+    - title: "Appendix C: Glossary"
       url: /work/toolkits/service-design-framework/appendix-glossary/
