--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -196,7 +196,7 @@ content_guide:
 
 brand_identity:
   title: Identity
-  description: Discover Skylight’s core brand elements and our rules for using them.
+  description: Discover Skylight’s core brand elements <br class="linebreak">and our rules for using them.
   toc:
     - title: Logo
       url: /brand/identity/logo/
@@ -211,7 +211,7 @@ brand_identity:
 
 brand_writing:
   title: Writing
-  description: Craft clear and consistent content using Skylight’s voice and brand personality.
+  description: Craft clear and consistent content using Skylight’s <br class="linebreak">voice and brand personality.
   toc:
     - title: Brand narrative
       url: /brand/writing/brand-narrative/
@@ -224,7 +224,7 @@ brand_writing:
 
 brand_illustration:
   title: Illustration
-  description: Design images and visuals that align with the Skylight brand.
+  description: Design images and visuals that align <br class="linebreak">with the Skylight brand.
   toc:
     - title: Principles
       url: /brand/illustration/principles/
@@ -243,10 +243,10 @@ brand_illustration:
 
 brand_outreach:
   title: Outreach
-  description: Develop materials using Skylight’s graphic elements and visual identity.
+  description: Develop materials using Skylight’s graphic elements <br class="linebreak">and visual identity.
   toc:
     - title: Intro
-      url: /brand/outreach/
+      url: /brand/outreach/intro/
     - title: Graphic elements
       url: /brand/outreach/graphic-elements/
     - title: Brand in use
