--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -51,7 +51,7 @@ data_sharing_playbook:
       url: /work/toolkits/data-sharing-playbook/preparing-a-successful-data-request/
     - title: Transferring data
       url: /work/toolkits/data-sharing-playbook/transferring-data/
-    - title: "Appendix A: Setting smart goals"
+    - title: "Appendix A: Setting SMART goals"
       url: /work/toolkits/data-sharing-playbook/appendix-a-setting-smart-goals/
     - title: "Appendix B: Linking datasets"
       url: /work/toolkits/data-sharing-playbook/appendix-b-linking-datasets/
