--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -222,6 +222,7 @@ service_design_framework:
 brand_identity:
   title: Identity
   description: Discover Skylight’s core brand elements <br class="linebreak">and our rules for using them.
+  description_long: Discover Skylight’s core brand elements and our rules for using them. We’ve provided guidance for each element, including Skylight’s logo, icons, color, typography, and imagery.  Learn how these elements work together to create Skyilght’s distinctive identity and ensure that our audience consistently recognizes our brand across contexts.
   toc:
     - title: Logo
       url: /brand/identity/logo/
@@ -237,6 +238,7 @@ brand_identity:
 brand_writing:
   title: Writing
   description: Craft clear and consistent content using Skylight’s <br class="linebreak">voice and brand personality.
+  description_long: Craft clear and consistent content using Skylight’s voice and brand personality. This section will help you channel the Skylight brand in all of your written communications. You’ll find a breakdown of our brand narrative, sample messaging, and guidance around voice and tone, as well as other useful resources that we’ve developed to help you write in the Skylight style.
   toc:
     - title: Brand narrative
       url: /brand/writing/brand-narrative/
@@ -250,6 +252,7 @@ brand_writing:
 brand_illustration:
   title: Illustration
   description: Design images and visuals that align <br class="linebreak">with the Skylight brand.
+  description_long: Design images and visuals that align with the Skylight brand. Keep in mind our principles when developing illustrations in order to effectively highlight the value of working with us and to reflect our mission of making government work in a digital world. This section also offers rules around our palette, style, and other specific illustration use cases.
   toc:
     - title: Principles
       url: /brand/illustration/principles/
@@ -269,6 +272,7 @@ brand_illustration:
 brand_outreach:
   title: Outreach
   description: Develop materials using Skylight’s graphic elements <br class="linebreak">and visual identity.
+  description_long: Develop materials using Skylight’s graphic elements and visual identity. In this section, we’ve provided examples of the graphic elements we use in layout design and illustration, as well as samples of Skylight’s brand in use, both for digital assets and Skylight swag.
   toc:
     - title: Intro
       url: /brand/outreach/intro/
@@ -282,6 +286,7 @@ brand_outreach:
 brand_resources:
   title: Resources
   description: Find the assets you need to share Skylight’s story.
+  description_long: Find the digital assets you need to share Skylight’s story. If you have questions or need additional resources, please <a href="mailto:admin@skylight.digital">contact us</a>.
   toc:
     - title: Emoji
       url: /brand/resources/emoji/
