--- a/_data/ditap.yml
+++ b/_data/ditap.yml
@@ -10,7 +10,7 @@ ditap:
       registration_link: https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-148264871221
       spots_remaining: 14
     - cohort: 3
-      run_date: Feb 7, 2022 to Jul 27, 2022
+      run_date: Feb 7 to Jul 27, 2022
       description: In-person classroom sessions will be held on Feb 7–9, Apr 19–21, Jun 6–8, and Jul 25–27. If COVID-19 continues to present public-health risks, however, these sessions will be conducted virtually.
       location: Online + Washington DC
       instructors: Chris Cairns, Dan Levenson, Robert Read, and Leslie Garner Franklin
