--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -292,5 +292,5 @@ brand_resources:
       url: /brand/resources/emoji/
     - title: Templates
       url: /brand/resources/templates/
-    - title: Brand pack
-      url: /brand/resources/brand-pack/
+    - title: Download
+      url: /brand/resources/download/
