Update outreach IA

--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -266,14 +266,10 @@ brand_outreach:
   description: Develop materials using Skylight’s graphic elements <br class="linebreak">and visual identity.
   description_long: Develop materials using Skylight’s graphic elements and visual identity. In this section, we’ve provided examples of the graphic elements we use in layout design and illustration, as well as samples of Skylight’s brand in use, both for digital assets and Skylight swag.
   toc:
-    - title: General guidance
-      url: /brand/outreach/general-guidance/
-    - title: Graphic elements
-      url: /brand/outreach/graphic-elements/
+    - title: Layout design
+      url: /brand/outreach/layout-design/
     - title: Brand in use
       url: /brand/outreach/brand-in-use/
-    - title: Swag
-      url: /brand/outreach/swag/
 
 brand_resources:
   title: Resources
