--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -45,3 +45,8 @@
   category: Business Strategy & Operations
   location: Remote
   order: 70
+- title: VP of Service Excellence
+  url: https://apply.workable.com/skylight/j/2D3D1B7688/
+  category: Business Strategy & Operations
+  location: Remote
+  order: 80
