Update page title and shorten logo text

--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -266,8 +266,8 @@ brand_outreach:
   description: Develop materials using Skylight’s graphic elements <br class="linebreak">and visual identity.
   description_long: Develop materials using Skylight’s graphic elements and visual identity. In this section, we’ve provided examples of the graphic elements we use in layout design and illustration, as well as samples of Skylight’s brand in use, both for digital assets and Skylight swag.
   toc:
-    - title: Layout design
-      url: /brand/outreach/layout-design/
+    - title: Design guidance
+      url: /brand/outreach/design-guidance/
     - title: Brand in use
       url: /brand/outreach/brand-in-use/
 
