Add new Outreach content

--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -268,8 +268,8 @@ brand_outreach:
   toc:
     - title: Design guidance
       url: /brand/outreach/design-guidance/
-    - title: Brand in use
-      url: /brand/outreach/brand-in-use/
+    - title: Outreach types
+      url: /brand/outreach/outreach-types/
 
 brand_resources:
   title: Resources
