--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1987,8 +1987,8 @@
   full_name: Nathan Carter
   short_name: N. Carter
   profile_path: /company/about/#nathan-carter
-  image: /img/people/nathan-carter.png
-  image_description: Illustration of Nathan Carter
+  image: /img/people/nathan-carter.jpg
+  image_description: Photo of Nathan Carter
   position: Software Engineer
   bio: >
     Nathan's a software engineer driven by building digital services for public good. Prior to becoming an engineer, he ran his own bakery. Nathan lives in North Carolina.
