--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2282,7 +2282,7 @@
   fname: Jennifer
   lname: Herzberg
   full_name: Jennifer Herzberg
-  short_name: S. Tress
+  short_name: J. Herzberg
   profile_path: /company/about/#jennifer-herzberg
   image: /img/people/jennifer-herzberg.jpg
   image_description: Photo of Jennifer Herzberg
