--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2315,14 +2315,14 @@
       link: /work/team-member/jennifer-herzberg/
       link_description: Jennifer's Project Work
       fa_icon_name: wrench
-- name: george-sarah-hager
+- name: sarah-george-hager
   fname: George
   lname: Hager
-  full_name: George (Sarah) Hager
+  full_name: Sarah George Hager
   short_name: G. Hager
-  profile_path: /company/about/#george-sarah-hager
-  image: /img/people/george-sarah-hager.jpg
-  image_description: Photo of George (Sarah) Hager
+  profile_path: /company/about/#sarah-george-hager
+  image: /img/people/sarah-george-hager.jpg
+  image_description: Photo of Sarah George Hager
   position: Software Engineer
   bio: >
     George’s an engineer who enjoys building software that makes life easier, more equitable, and delightful. She specializes in full-stack software engineering and test-driven development, and loves developing best practices on engineering teams. George previously worked with the U.S. Air Force's Kessel Run program. She lives in Massachusetts.
