--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -196,7 +196,7 @@ content_guide:
 
 service_design_framework:
   title: Service Design Framework
-  description: Practices and tools for delivering optimal <br class="linebreak">user experience journeys.
+  description: Practices and tools for delivering optimal user experience journeys.
   toc:
     - title: Service design overview
       url: /work/toolkits/service-design-framework/
@@ -221,7 +221,7 @@ service_design_framework:
 
 brand_identity:
   title: Identity
-  description: Discover Skylight’s core brand elements <br class="linebreak">and our rules for using them.
+  description: Discover Skylight’s core brand elements and our rules for using them.
   description_long: Discover Skylight’s core brand elements and our rules for using them. We’ve provided guidance for each element, including Skylight’s logo, icons, color, typography, and imagery. Learn how these elements work together to create Skyilght’s identity.
   toc:
     - title: Logos
@@ -237,7 +237,7 @@ brand_identity:
 
 brand_writing:
   title: Writing
-  description: Craft clear and consistent content using Skylight’s <br class="linebreak">voice and brand personality.
+  description: Craft clear and consistent content using Skylight’s brand personality and style guide.
   description_long: Craft clear and consistent content using Skylight’s voice and brand personality. You’ll find a breakdown of our brand narrative, sample messaging, and guidance around voice and tone, as well as other useful resources that we’ve developed to help you write in the Skylight style.
   toc:
     - title: Brand narrative
@@ -251,7 +251,7 @@ brand_writing:
 
 brand_illustration:
   title: Illustration
-  description: Design images and visuals that align <br class="linebreak">with the Skylight brand.
+  description: Design images that represent Skylight’s principles and visual style.
   description_long: Design images and visuals that align with the Skylight brand. Keep in mind our principles when developing illustrations to effectively highlight the value of working with us. This section also offers rules around our palette, style, and other illustration use cases.
   toc:
     - title: Principles
@@ -263,7 +263,7 @@ brand_illustration:
 
 brand_outreach:
   title: Outreach
-  description: Develop materials using Skylight’s graphic elements <br class="linebreak">and visual identity.
+  description: Develop marketing and communication materials using Skylight’s design guidelines.
   description_long: Develop materials using Skylight’s graphic elements and visual identity. In this section, we’ve provided examples of the graphic elements we use in layout design and illustration, as well as samples of Skylight’s brand in use, both for digital assets and Skylight swag.
   toc:
     - title: Design guidance
