--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -237,7 +237,7 @@ brand_identity:
 
 brand_writing:
   title: Writing
-  description: Craft clear and consistent content using Skylight’s brand personality and style guide.
+  description: Craft clear and consistent content using our brand personality and style guide.
   description_long: Craft clear and consistent content using Skylight’s voice and brand personality. You’ll find a breakdown of our brand narrative, sample messaging, and guidance around voice and tone, as well as other useful resources that we’ve developed to help you write in the Skylight style.
   toc:
     - title: Brand narrative
@@ -263,7 +263,7 @@ brand_illustration:
 
 brand_outreach:
   title: Outreach
-  description: Develop marketing and communication materials using Skylight’s design guidelines.
+  description: Develop marketing and communication materials using our design guidelines.
   description_long: Develop materials using Skylight’s graphic elements and visual identity. In this section, we’ve provided examples of the graphic elements we use in layout design and illustration, as well as samples of Skylight’s brand in use, both for digital assets and Skylight swag.
   toc:
     - title: Design guidance
