Update voice and tone copy

--- a/_data/toolkits.yml
+++ b/_data/toolkits.yml
@@ -242,10 +242,8 @@ brand_writing:
   toc:
     - title: Brand narrative
       url: /brand/writing/brand-narrative/
-    - title: Voice
-      url: /brand/writing/voice/
-    - title: Tone
-      url: /brand/writing/tone/
+    - title: Voice and tone
+      url: /brand/writing/voice-and-tone/
     - title: Style
       url: /brand/writing/style/
 
