--- a/_data/open_positions.yml
+++ b/_data/open_positions.yml
@@ -45,18 +45,23 @@
   category: Research & Design
   location: Remote
   order: 70
+- title: Chief Operating Officer
+  url: https://apply.workable.com/skylight/j/A744A85F49/
+  category: Business Strategy & Operations
+  location: Remote
+  order: 80
 - title: Chief of Staff
   url: https://apply.workable.com/skylight/j/E7AB0727B0/
   category: Business Strategy & Operations
   location: Remote
-  order: 80
+  order: 90
 - title: VP of Service Excellence
   url: https://apply.workable.com/skylight/j/2D3D1B7688/
   category: Business Strategy & Operations
   location: Remote
-  order: 90
+  order: 100
 - title: VP of Training Services
   url: https://apply.workable.com/skylight/j/FB764D28B5/
   category: Business Strategy & Operations
   location: Remote
-  order: 100
+  order: 110
