--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1634,9 +1634,9 @@
   profile_path: /company/about/#rebecca-lubitzmarchena
   image: /img/people/rebecca-lubitzmarchena.jpg
   image_description: Photo of Rebecca Lubitz-Marchena
-  position: Content Strategist
+  position: Content Designer
   bio: >
-    Rebecca's a content strategist with a background in product marketing,
+    Rebecca's a content designer with a background in product marketing,
     UX writing, and localization. She enjoys turning complex concepts into plain
     language and creating great experiences through human-centered content.
     Rebecca lives in Maryland.
@@ -2015,9 +2015,9 @@
   profile_path: /company/about/#matt-goldberg
   image: /img/people/matt-goldberg.jpg
   image_description: Photo of Matt Goldberg
-  position: Content Strategist
+  position: Content Designer
   bio: >
-    Matt's a content strategist and storyteller with a background in clean tech innovation. He enjoys making complex information accessible to everyone. He also cares deeply about improving people's lives and livelihoods. Matt lives in Pennsylvania.
+    Matt's a content designer and storyteller with a background in clean tech innovation. He enjoys making complex information accessible to everyone. He also cares deeply about improving people's lives and livelihoods. Matt lives in Pennsylvania.
   active: true
   order: 530
   socials:
@@ -2183,9 +2183,9 @@
   profile_path: /company/about/#laura-kerry
   image: /img/people/laura-kerry.jpg
   image_description: Photo of Laura Kerry
-  position: Content Strategist
+  position: Content Designer
   bio: >
-    Laura's a content strategist who specializes in UX writing and content design, operations, and governance. She loves distilling complex information into human-centered content, and enjoys empowering others to do the same. Most recently, Laura worked at the NYC Mayor's Office for Economic Opportunity. She lives in New York.
+    Laura's a content designer who specializes in content strategy, design, operations, and governance. She loves distilling complex information into human-centered content, and enjoys empowering others to do the same. Most recently, Laura worked at the NYC Mayor's Office for Economic Opportunity. She lives in New York.
   active: true
   order: 530
   socials:
